--- a/css/Store.css
+++ b/css/Store.css
@@ -14,9 +14,11 @@ header,li,input[type=text]{
 	text-align:center;
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
-
-
-
+}
+#fblogin{
+	float:left;
+	
+	
 }
 h2{
 	
