--- a/css/Store.css
+++ b/css/Store.css
@@ -15,7 +15,8 @@ header,li,input[type=text]{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
 h2{
 	
 	font-size:32px;
