--- a/css/Store.css
+++ b/css/Store.css
@@ -157,7 +157,7 @@ margin-bottom:100px;
 
 
 }
-#fb{border:1px solid blue;}
+#fb{border:2px solid blue;margin-right:50%;}
 h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white;}
 h1{ text-decoration: underline;}
 #winMsg,#edtWin,#mainM,#dltWin,#subedt,#LoSaWin{
