--- a/css/Store.css
+++ b/css/Store.css
@@ -15,8 +15,6 @@ header,li,input[type=text]{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
 h2{
 	
 	font-size:32px;
@@ -158,8 +156,7 @@ margin-bottom:100px;
 
 }
 #fb{border:2px solid blue;margin-left:55%;margin-top:20px;}
-h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white;}
-h1{ text-decoration: underline;}
+h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white; text-decoration: underline;}
 #winMsg,#edtWin,#mainM,#dltWin,#subedt,#LoSaWin{
 	
 	
