--- a/css/Store.css
+++ b/css/Store.css
@@ -129,15 +129,6 @@ margin-bottom:100px;
 	z-index:-1;
  text-align:center;
 	 left:50px;
-	/*font-size:24px;
-	margin-left:60%;
-	/*width:35%;
-	
-	margin-top:3%;*/
-/*	border: solid black 7px;*/
-
-	  /* 	background-image:url("list1.png");*/
-	/* border: solid black 7px;*/
 	width:100%;
 	border-bottom:solid black 0px;
 	    background: rgb(204, 204, 204);
@@ -160,7 +151,6 @@ margin-bottom:100px;
 h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white; text-decoration: underline;}
 #winMsg,#edtWin,#mainM,#dltWin,#subedt,#LoSaWin{
 	
-	
 	background-image:url("hbg.jpg");
 	text-align:center;
 	position:absolute;
@@ -169,12 +159,9 @@ h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white; 
 	color: black;
 	width:750px;
 	height:375px;
- 
 
 left:calc(40% - 550px);
    border-radius:50px;
-	
-
 	visibility:hidden;
 	box-shadow: 0 6px 12px 0 rgba(0, 0, 0,0.7), 0 8px 20px 0 rgba(0, 0, 0, 0.75);
 
@@ -184,7 +171,7 @@ left:calc(40% - 550px);
     overflow-x:hidden;
 		visibility:visible;
 }
-#winMsg #addbtn,#cnlbtn,#confdlt,#change,#find,#datecnl,#setDt{
+#addbtn,#cnlbtn,#confdlt,#change,#find,#datecnl,#setDt{
 	border-right:1px solid white;
 	font-weight:bold;
 	font-size:25px;
@@ -202,7 +189,6 @@ left:calc(40% - 550px);
 	font-weight:bold;
 	font-size:20px;
 	background-image:url("bg.jpg");
-	margin-bottom:250px;
 	width:150px;
 	margin-right:25px;
 	height:50px;
