--- a/css/Store.css
+++ b/css/Store.css
@@ -15,7 +15,7 @@ header,li,input[type=text]{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-#fbcomt{left:calc(0%);margin-right:25%;}
+#fbcomt{float:left;margin-left:10%;}
 h2{
 	
 	font-size:32px;
