--- a/css/Store.css
+++ b/css/Store.css
@@ -70,7 +70,8 @@ font-weight:bold;
 width:40%;
 background-image:url("hbg.jpg");
 	font-size:24px;
-	margin-left:60%;
+
+	float:right;
 	font-weight:bold;
 	   border-radius:50px;
 font-style:italic;
@@ -95,7 +96,7 @@ box-shadow: 0 6px 12px 0 rgba(0, 0, 0,0.7), 0 8px 20px 0 rgba(0, 0, 0, 0.75);
 	border: 1px solid black;
 	border-radius: 2px solid black;
 	background-color:white;
-opacity:0.3;
+opacity:0.5;
 border-radius:10px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
