--- a/css/Store.css
+++ b/css/Store.css
@@ -15,7 +15,7 @@ header,li,input[type=text]{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-#fbcomt{position:relative;margin-top:0px;padding-top:0px;}
+#fbcomt{margin-top:0px;padding-top:0px;}
 h2{
 	
 	font-size:32px;
