--- a/css/Store.css
+++ b/css/Store.css
@@ -21,7 +21,7 @@ h2{
 	font-size:32px;
 margin-right:35px;
 color:white;
-	text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white;
+	text-shadow: 1px 1px 2px blue, 0 0 15px blue, 0 0 5px white;
 }
 #header{
 border-radius:15px;
@@ -150,7 +150,7 @@ margin-bottom:100px;
 
 }
 #fb{border:2px solid blue;margin-left:55%;margin-top:20px;}
-h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px white; text-decoration: underline;color:white;}
+h1{font-size:40px;text-shadow: 1px 1px 2px white, 0 0 15px blue, 0 0 3px white; text-decoration: underline;color:white;}
 #winMsg,#edtWin,#mainM,#dltWin,#subedt,#LoSaWin{
 	
 	background-image:url("hbg.jpg");
