--- a/css/Store.css
+++ b/css/Store.css
@@ -20,8 +20,8 @@ h2{
 	
 	font-size:32px;
 margin-right:35px;
-color:white;
-	text-shadow: 1px 1px 5px blue, 0 0 5px white, 0 0 5px yellow;
+color:#E0E0E0;
+	text-shadow: 1px 1px 2px blue, 0 0 3px #E0E0E0, 0 0 2px black;
 }
 #header{
 border-radius:15px;
@@ -97,7 +97,7 @@ box-shadow: 0 6px 12px 0 rgba(0, 0, 0,0.7), 0 8px 20px 0 rgba(0, 0, 0, 0.75);
 	border: 1px solid black;
 	border-radius: 2px solid black;
 	background-color:white;
-opacity:0.5;
+opacity:0.6;
 border-radius:10px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -150,8 +150,8 @@ margin-bottom:100px;
 
 }
 #fb{border:2px solid blue;margin-left:55%;margin-top:20px;}
-h1{font-size:40px;text-shadow: 1px 1px 5px blue, 0 0 10px white, 0 0 5px yellow; text-decoration: underline;color:white;}
-h3{	text-shadow: 1px 1px 10px blue, 0 0 15px white, 0 0 5px yellow;}
+h1{font-size:40px;text-shadow: 1px 1px 2px blue, 0 1px 5px #E0E0E0, 0 0 0px yellow; text-decoration: underline;color:#E0E0E0;}
+h3{	text-shadow: 1px 1px 2px blue, 0 0 7px #E0E0E0, 0 0 5px yellow;}
 #winMsg,#edtWin,#mainM,#dltWin,#subedt,#LoSaWin{
 	
 	background-image:url("hbg.jpg");
@@ -234,20 +234,20 @@ font-size:25px;
 #srtAd,#AscQu,#srtdt{
 		 text-decoration: underline;
 	background-color:transparent;
-color:white;
+color:#E0E0E0;
 	font-weight:bold;
 	cursor: pointer;
-	text-shadow: 1px 1px 10px blue, 0 0 15px black, 0 0 5px yellow;
+	text-shadow: 1px 1px 2px blue, 0 0 2px white, 0 0 0px yellow;
 	font-size:20px;
 }
 #clrlst{
 	background-color:transparent;
-	color:white;
+	color:#E0E0E0;
 	border: solid blue 1px;
 	font-size:22px;
 	cursor: pointer;
 	font-weight:bold;
-	text-shadow: 1px 1px 10px blue, 0 0 10px white, 0 0 5px yellow;
+	text-shadow: 1px 1px 10px blue, 0 0 5px white, 0 0 5px yellow;
 }
 #srtAd:hover,#AscQu:hover,#srtdt:hover,#clrlst:hover{color:red}
 #datebtn{	
