--- a/css/Store.css
+++ b/css/Store.css
@@ -8,14 +8,13 @@ min-width:1600px;
 
 	background-image:url("bg.jpg");
 background-size:cover;
-margin-bottom:30%;
 }
 header,li,input[type=text]{
 	text-align:center;
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-#fbcomt{margin-top:15%;padding-top:0px;height:700px;}
+#fbcomt{border:2px solid blue;margin-top:15%;padding-top:0px;height:600px;}
 h2{
 	
 	font-size:32px;
