--- a/css/Store.css
+++ b/css/Store.css
@@ -76,7 +76,7 @@ background-image:url("hbg.jpg");
 	   border-radius:50px;
 font-style:italic;
 border: solid black 7px;
-
+margin-bottom:10%;
 padding-bottom:25px;
 margin-top:35px;
 margin-right:50px;
