--- a/css/Store.css
+++ b/css/Store.css
@@ -5,7 +5,7 @@ body{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 min-width:1600px;
-margin-bottom:10%;
+min-height:1200px;
 
 	background-image:url("bg.jpg");
 background-size:cover;
@@ -71,7 +71,7 @@ font-weight:bold;
 width:40%;
 background-image:url("hbg.jpg");
 	font-size:24px;
-
+height:800px;
 	float:right;
 	font-weight:bold;
 	   border-radius:50px;
@@ -135,7 +135,7 @@ margin-bottom:100px;
 	border-bottom:solid black 0px;
 	    background: rgb(204, 204, 204);
 	  background: rgba(204, 204, 204, 0.5);
-	height:70%;
+	height:300px;
 
 	   border-radius:50px;
     overflow:scroll;
