--- a/css/Store.css
+++ b/css/Store.css
@@ -15,7 +15,7 @@ header,li,input[type=text]{
  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.5);
 transition:box-shadow 1s;
 }
-#fbcomt{margin-top:15%;padding-top:0px;}
+#fbcomt{height:400px;border:2px solid blue;margin-top:23%;margin-left:10%;padding-top:0px;width:40%;}
 h2{
 	
 	font-size:32px;
